# notebooklm-mcp

./: README.md  SKILL.md  TOOL_REVIEW.md  _runtime.py  enums.py  errors.py  pyproject.toml  server.py
tests/: test_drift.py  test_errors.py  test_serializers.py  test_server.py
tools/: __init__.py  artifacts.py  chat.py  notebooks.py  research.py  settings.py  sources.py
